[package]
name    = "wormhole"
version = "0.1.0"
edition = "2018"

[dependencies]
borsh         = "*"
colored       = "*"
hex           = "*"
hex-literal   = "*"
phf           = { version = "0.10", features = ["macros"] }
rand          = "*"
secp256k1     = { version = "0.20.3", features = ["recovery"] }
sha3          = { version = "0.9.1" }
solana-client = "=1.7.0"
solana-sdk    = "=1.7.0"
structopt     = { version = "0.3", default-features = false }
tokio         = "*"
web3          = { version = "0.17.0" }
wormhole-sdk  = { path = "../sdk/rust/sdk", features=["mainnet", "solana"] }
